Added email info to README.

--- a/README
+++ b/README
@@ -18,4 +18,4 @@ file COPYING for the full license.
 
     Installation instructions to come.
 
-    Copyright 2012 Chris Foster
+    Copyright 2012 Chris Foster <cdbfoster@gmail.com>
