Minor README changes.

--- a/README
+++ b/README
@@ -4,11 +4,12 @@
     The goal of this project is to create a more moddable 
 Minecraft without relying on a limited mod-API that hides
 the insides of Minecraft -- Minecraft should be written as
-an API into itself.  The Recraft project attempts to accomplish
-this through an object-oriented design by implementing Minecraft
-as a variety of objects communicating through common interfaces,
-thus abstracting individual implementations.  The result is
-a more easily extensible, maintainable program to serve as a
+a collection of APIs into its various, separate components.
+The Recraft project attempts to accomplish this through an
+object-oriented design by implementing Minecraft as a variety
+of objects communicating through common interfaces, thus
+abstracting individual implementations.  The result is a
+more easily extensible, maintainable program to serve as a
 base for modding.
 
     Recraft's structure is inspired by PBRT (www.pbrt.org).
@@ -16,6 +17,6 @@ base for modding.
     Recraft is released under the GNU GPL.  Please see the
 file COPYING for the full license.
 
-    Installation instructions to come.
+    Build/Installation instructions to come.
 
     Copyright 2012 Chris Foster <cdbfoster@gmail.com>
