Added simple build instructions.

--- a/README
+++ b/README
@@ -15,6 +15,6 @@ base for modding.
     Recraft is released under the GNU GPL.  Please see the
 file COPYING for the full license.
 
-    Build/Installation instructions to come.
+    See the file BUILDING for building instructions.
 
     Copyright 2012 Chris Foster <cdbfoster@gmail.com>
